# alog

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.dev  Makefile  README.md
.claude/: settings.json  settings.local.json
.claude/skills/alog/: SKILL.md  get-project.sh
.claude/skills/alog-export/: SKILL.md
.claude/skills/alog-summarize/: SKILL.md
.github/workflows/: release.yml  test.yml
aspec/: foundation.md
aspec/architecture/: design.md  security.md
aspec/devops/: localdev.md  operations.md
aspec/uxui/: cli.md
aspec/work-items/: 0001-init-command.md  0002-prepare-for-release.md  0003-summarize-and-export-skills.md
docs/: getting-started.md
docs/releases/: v0.1.0.md
src/: cli.rs  error.rs  lib.rs  main.rs  models.rs  search.rs
src/commands/: export.rs  init.rs  mod.rs  recall.rs  write.rs
src/storage/: config.rs  logbook.rs  mod.rs
tests/: cli_test.rs  integration_test.rs
